@@ -278,3 +278,6 @@ No deberia ser muy dificil, tener una lista de nombres de ventanas y sus llamada
 
 -Poder ver ventanas en background con menú cerrado de la misma manera que salen mensajes splash?
 
+-Parece que si hay ventanas en background muy grandes (como waveform) pueden llegar a ocultar parcialmente la ventana superior. Por que??
+Quiza tiene que ver con la caida de frames? Quiza solo afecta los putpixel? no estoy seguro... Tambien pasa con visualmem. Quiza las que son mas de 32 de ancho??
+
